--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <html lang="en">
 
 <head>
-
-
     <h1> This is my header</h1>
+    <p> this is a paragraph that contains information </p>
 </head>
 
 <body>
