my third commit!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <h1> This is my header</h1>
-    <p> this is a paragraph that contains information </p>
+    <p> this is a paragraph that contains information, with some other text </p>
 </head>
 
 <body>
