Upgraded to include some sytling in CSS

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-
+<link rel="stylesheet" href="style.css">
 <html lang="en">
-
 <head>
     <h1> This is my header</h1>
-    <p> this is a paragraph that contains information, with some other text </p>
+    <p> This is a paragraph that contains information, with some other text </p>
 </head>
 
 <body>
