Added search bar and changed the CSS

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <link rel="stylesheet" href="site.css">
 <html lang="en">
 <head>
-    <h1> This is my header</h1>
-    <p> This is a paragraph that contains information, with some other text </p>
+
+    <div class="topnav">
+        <a class="active" href="#home">Page 1</a>
+        <a href="#about">Page 2</a>
+        <a href="#contact">Page 3</a>
+        <input type="text" placeholder="Search..">
+      </div>
+
+
 </head>
 
 <body>
+
+    <p> This is a paragraph that contains information, with some other text </p>
 
 </body>
 
