--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 
     <div class="topnav">
-        <a class="active" href="#home">Page 1</a>
-        <a href="#about">Page 2</a>
-        <a href="#contact">Page 3</a>
+        <a class="active" href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
         <input type="text" placeholder="Search..">
       </div>
 
