--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <link rel="stylesheet" href="site.css">
 <html lang="en">
 <head>
-
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <input type="text" placeholder="Search..">
-      </div>
-
-
+    <h1> This is my header</h1>
+    <p> This is a paragraph that contains information, with some other text </p>
 </head>
 
 <body>
 
-    <p> This is a paragraph that contains information, with some other text </p>
 
 </body>
 
