--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Contact</title>
 </head>
 <body>
 
-    <h1>This is my about page</h1>
-    <p>My name is insert name here and I am creating a web page</p>
+    <h1>Contact</h1>
     
 </body>
 </html>
