--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="site.css">
 <html lang="en">
+<link rel="stylesheet" href="site.css">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
     <h1> This is my header</h1>
-    <p> This is a paragraph that contains information, with some other text </p>
 </head>
-
 <body>
 
-
+    <p> This is a paragraph that contains information, with some other text </p>
+    
 </body>
-
 </html>
