--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="site.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,5 +9,6 @@
 </head>
 <body>
     <h1> About </h1>
+    <p> some inspirational words of wisdom </p>
 </body>
 </html>
