--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,16 @@
 </head>
 <body>
 
-    <h1>This is my contact page</h1>
+    <h1>Contact us</h1>
+    <ul>
+
+        <li> List Item 1 </li>
+        <li> List Item 2 </li>
+        <li> List Item 3 </li>
+        <li> List Item 4 </li>
+        <li> List Item 5 </li>
+        <li> List Item 6 </li>
+    </ul>
     
 </body>
 </html>
