changed paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <p> This is a paragraph that contains information, with some other text </p>
+    <p> changing the words in this paragraph for good measure </p>
     
 </body>
 </html>
